[gd_scene load_steps=7 format=2]

[ext_resource path="res://layout_elements/Boomerang.gd" type="Script" id=1]
[ext_resource path="res://assets/Gregory/axe.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.65421, 34.3136 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.91473
height = 39.4462

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20.7838, 3.88287 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32.5197, 4.17865 )

[node name="Boomerang" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 32
script = ExtResource( 1 )

[node name="CollisionDetection" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionDetection"]
position = Vector2( -11.3445, 16.3865 )
rotation = 0.804597
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CollisionDetection"]
position = Vector2( 17.0167, -17.647 )
rotation = -0.865683
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 18.5378, -14.3865 )
rotation = -2.51327
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -11.3445, 18.2772 )
rotation = -0.733038
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="visibilityNode4" type="VisibilityNotifier2D" parent="."]
position = Vector2( -42.409, 44.8943 )
rotation = 0.785398
scale = Vector2( 0.312819, 0.306097 )

[node name="visibilityNode7" type="VisibilityNotifier2D" parent="."]
position = Vector2( -10.6588, 25.7858 )
rotation = 0.785398
scale = Vector2( 0.312819, 0.306097 )

[node name="visibilityNode8" type="VisibilityNotifier2D" parent="."]
position = Vector2( 40.8958, 5.42958 )
rotation = 0.785398
scale = Vector2( 0.312819, 0.306097 )

[node name="visibilityNode9" type="VisibilityNotifier2D" parent="."]
position = Vector2( 13.0074, -37.4913 )
rotation = 0.785398
scale = Vector2( 0.312819, 0.306097 )

[node name="visibilityNode10" type="VisibilityNotifier2D" parent="."]
position = Vector2( 32.4247, -19.4416 )
rotation = 0.785398
scale = Vector2( 0.312819, 0.306097 )

[node name="visibilityNode11" type="VisibilityNotifier2D" parent="."]
position = Vector2( -10.5308, -37.482 )
rotation = 0.785398
scale = Vector2( 0.312819, 0.306097 )

[node name="visibilityNode5" type="VisibilityNotifier2D" parent="."]
position = Vector2( -16.8694, -20.5362 )
rotation = 0.785398
scale = Vector2( 0.312819, 0.306097 )

[node name="visibilityNode6" type="VisibilityNotifier2D" parent="."]
position = Vector2( -21.8405, 15.1311 )
rotation = 0.785398
scale = Vector2( 0.312819, 0.306097 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.394664, 1.51958 )
scale = Vector2( 2.74727, 2.49483 )
z_index = 4096
texture = ExtResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 1.07547, 6.51488 )
scale = Vector2( 1.69327, 1.54151 )
[connection signal="body_entered" from="CollisionDetection" to="." method="_on_CollisionDetection_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="visibilityNode4" to="." method="_on_visibilityNode_screen_exited"]
[connection signal="screen_exited" from="visibilityNode7" to="." method="_on_visibilityNode_screen_exited"]
[connection signal="screen_exited" from="visibilityNode8" to="." method="_on_visibilityNode_screen_exited"]
[connection signal="screen_exited" from="visibilityNode9" to="." method="_on_visibilityNode_screen_exited"]
[connection signal="screen_exited" from="visibilityNode10" to="." method="_on_visibilityNode_screen_exited"]
[connection signal="screen_exited" from="visibilityNode11" to="." method="_on_visibilityNode_screen_exited"]
[connection signal="screen_exited" from="visibilityNode5" to="." method="_on_visibilityNode_screen_exited"]
[connection signal="screen_exited" from="visibilityNode6" to="." method="_on_visibilityNode_screen_exited"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
